hw05/yDFA.output
Grammar

    0 $accept: line $end

    1 line: A0 '\n'
    2     | line A0 '\n'
    3     | error '\n'

    4 A0: aletter A1
    5   | bletter A0

    6 A1: aletter A2
    7   | bletter A5

    8 A2: aletter A3
    9   | bletter A4

   10 A3: aletter A3
   11   | bletter A4
   12   | /* empty */

   13 A4: aletter A6
   14   | bletter A7
   15   | /* empty */

   16 A5: aletter A6
   17   | bletter A7

   18 A6: bletter A5
   19   | /* empty */

   20 A7: aletter A1
   21   | bletter A0
   22   | /* empty */

   23 aletter: 'a'

   24 bletter: 'b'


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1 2 3
'a' (97) 23
'b' (98) 24
error (256) 3


Nonterminals, with rules where they appear

$accept (6)
    on left: 0
line (7)
    on left: 1 2 3, on right: 0 2
A0 (8)
    on left: 4 5, on right: 1 2 5 21
A1 (9)
    on left: 6 7, on right: 4 20
A2 (10)
    on left: 8 9, on right: 6
A3 (11)
    on left: 10 11 12, on right: 8 10
A4 (12)
    on left: 13 14 15, on right: 9 11
A5 (13)
    on left: 16 17, on right: 7 18
A6 (14)
    on left: 18 19, on right: 13 16
A7 (15)
    on left: 20 21 22, on right: 14 17
aletter (16)
    on left: 23, on right: 4 6 8 10 13 16 20
bletter (17)
    on left: 24, on right: 5 7 9 11 14 17 18 21


state 0

    0 $accept: . line $end

    error  shift, and go to state 1
    'a'    shift, and go to state 2
    'b'    shift, and go to state 3

    line     go to state 4
    A0       go to state 5
    aletter  go to state 6
    bletter  go to state 7


state 1

    3 line: error . '\n'

    '\n'  shift, and go to state 8


state 2

   23 aletter: 'a' .

    $default  reduce using rule 23 (aletter)


state 3

   24 bletter: 'b' .

    $default  reduce using rule 24 (bletter)


state 4

    0 $accept: line . $end
    2 line: line . A0 '\n'

    $end  shift, and go to state 9
    'a'   shift, and go to state 2
    'b'   shift, and go to state 3

    A0       go to state 10
    aletter  go to state 6
    bletter  go to state 7


state 5

    1 line: A0 . '\n'

    '\n'  shift, and go to state 11


state 6

    4 A0: aletter . A1

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    A1       go to state 12
    aletter  go to state 13
    bletter  go to state 14


state 7

    5 A0: bletter . A0

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    A0       go to state 15
    aletter  go to state 6
    bletter  go to state 7


state 8

    3 line: error '\n' .

    $default  reduce using rule 3 (line)


state 9

    0 $accept: line $end .

    $default  accept


state 10

    2 line: line A0 . '\n'

    '\n'  shift, and go to state 16


state 11

    1 line: A0 '\n' .

    $default  reduce using rule 1 (line)


state 12

    4 A0: aletter A1 .

    $default  reduce using rule 4 (A0)


state 13

    6 A1: aletter . A2

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    A2       go to state 17
    aletter  go to state 18
    bletter  go to state 19


state 14

    7 A1: bletter . A5

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    A5       go to state 20
    aletter  go to state 21
    bletter  go to state 22


state 15

    5 A0: bletter A0 .

    $default  reduce using rule 5 (A0)


state 16

    2 line: line A0 '\n' .

    $default  reduce using rule 2 (line)


state 17

    6 A1: aletter A2 .

    $default  reduce using rule 6 (A1)


state 18

    8 A2: aletter . A3

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    $default  reduce using rule 12 (A3)

    A3       go to state 23
    aletter  go to state 24
    bletter  go to state 25


state 19

    9 A2: bletter . A4

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    $default  reduce using rule 15 (A4)

    A4       go to state 26
    aletter  go to state 27
    bletter  go to state 28


state 20

    7 A1: bletter A5 .

    $default  reduce using rule 7 (A1)


state 21

   16 A5: aletter . A6

    'b'  shift, and go to state 3

    $default  reduce using rule 19 (A6)

    A6       go to state 29
    bletter  go to state 30


state 22

   17 A5: bletter . A7

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    $default  reduce using rule 22 (A7)

    A7       go to state 31
    aletter  go to state 32
    bletter  go to state 33


state 23

    8 A2: aletter A3 .

    $default  reduce using rule 8 (A2)


state 24

   10 A3: aletter . A3

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    $default  reduce using rule 12 (A3)

    A3       go to state 34
    aletter  go to state 24
    bletter  go to state 25


state 25

   11 A3: bletter . A4

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    $default  reduce using rule 15 (A4)

    A4       go to state 35
    aletter  go to state 27
    bletter  go to state 28


state 26

    9 A2: bletter A4 .

    $default  reduce using rule 9 (A2)


state 27

   13 A4: aletter . A6

    'b'  shift, and go to state 3

    $default  reduce using rule 19 (A6)

    A6       go to state 36
    bletter  go to state 30


state 28

   14 A4: bletter . A7

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    $default  reduce using rule 22 (A7)

    A7       go to state 37
    aletter  go to state 32
    bletter  go to state 33


state 29

   16 A5: aletter A6 .

    $default  reduce using rule 16 (A5)


state 30

   18 A6: bletter . A5

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    A5       go to state 38
    aletter  go to state 21
    bletter  go to state 22


state 31

   17 A5: bletter A7 .

    $default  reduce using rule 17 (A5)


state 32

   20 A7: aletter . A1

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    A1       go to state 39
    aletter  go to state 13
    bletter  go to state 14


state 33

   21 A7: bletter . A0

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    A0       go to state 40
    aletter  go to state 6
    bletter  go to state 7


state 34

   10 A3: aletter A3 .

    $default  reduce using rule 10 (A3)


state 35

   11 A3: bletter A4 .

    $default  reduce using rule 11 (A3)


state 36

   13 A4: aletter A6 .

    $default  reduce using rule 13 (A4)


state 37

   14 A4: bletter A7 .

    $default  reduce using rule 14 (A4)


state 38

   18 A6: bletter A5 .

    $default  reduce using rule 18 (A6)


state 39

   20 A7: aletter A1 .

    $default  reduce using rule 20 (A7)


state 40

   21 A7: bletter A0 .

    $default  reduce using rule 21 (A7)
